Fixed horizontal scrolling not working
Fixes #9

--- a/stylesheets/coffee-compile.less
+++ b/stylesheets/coffee-compile.less
@@ -9,6 +9,10 @@
 
   .editor {
     padding-left: 5px;
+
+    .lines{
+      overflow-x: auto;
+    }
   }
 
   code {
